mdapipkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Education__c</fullName>
        <inlineHelpText>Chapter Health Required Field</inlineHelpText>
        <label>Education</label>
        <summaryFilterItems>
            <field>Account_Affiliation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>School</value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Affiliation__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Email_1__c</fullName>
        <label>Emergency Contact Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Email_2__c</fullName>
        <label>Emergency Contact Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Email_3__c</fullName>
        <label>Emergency Contact Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Name_1__c</fullName>
        <label>Emergency Contact Name 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Name_2__c</fullName>
        <label>Emergency Contact Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Name_3__c</fullName>
        <label>Emergency Contact Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_1__c</fullName>
        <label>Emergency Contact Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_2__c</fullName>
        <label>Emergency Contact Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_3__c</fullName>
        <label>Emergency Contact Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_Country_Code_1__c</fullName>
        <label>Emergency Contact Phone Country Code 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_Country_Code_2__c</fullName>
        <label>Emergency Contact Phone Country Code 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Phone_Country_Code_3__c</fullName>
        <label>Emergency Contact Phone Country Code 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Relationship_1__c</fullName>
        <label>Emergency Contact Relationship 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Relationship_2__c</fullName>
        <label>Emergency Contact Relationship 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Em_Contact_Relationship_3__c</fullName>
        <label>Emergency Contact Relationship 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Type__c</fullName>
        <label>Enterprise Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Independent third party investment/valuation</fullName>
                </value>
                <value>
                    <fullName>Net Worth or assets before depreciation</fullName>
                </value>
                <value>
                    <fullName>Sum of public equity plus debt less cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Value__c</fullName>
        <label>Enterprise Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exp_Business_Travel_Frequency__c</fullName>
        <label>Business Travel Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Extensively (15+)</fullName>
                </value>
                <value>
                    <fullName>Travel Moderately (6-14)</fullName>
                </value>
                <value>
                    <fullName>Travel Rarely (0-5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Business__c</fullName>
        <label>Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Other Businesses</fullName>
                </value>
                <value>
                    <fullName>Career Transitions</fullName>
                </value>
                <value>
                    <fullName>CHLDFAMBUS</fullName>
                </value>
                <value>
                    <fullName>Developing My Board</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Africa</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Asia</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Australia/NZ</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Canada</fullName>
                </value>
                <value>
                    <fullName>Doing Business in China</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Europe</fullName>
                </value>
                <value>
                    <fullName>Doing Business in India</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Latin America</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Middle East</fullName>
                </value>
                <value>
                    <fullName>Doing Business in United States</fullName>
                </value>
                <value>
                    <fullName>Examining Corporate Strategy</fullName>
                </value>
                <value>
                    <fullName>Exiting Family Business</fullName>
                </value>
                <value>
                    <fullName>Family Business (General Issues)</fullName>
                </value>
                <value>
                    <fullName>Going Global</fullName>
                </value>
                <value>
                    <fullName>Hiring &amp; Retaining Execs</fullName>
                </value>
                <value>
                    <fullName>Mergers/Acquisitions</fullName>
                </value>
                <value>
                    <fullName>New Sources of Capital</fullName>
                </value>
                <value>
                    <fullName>Selling My Business</fullName>
                </value>
                <value>
                    <fullName>Starting a Business</fullName>
                </value>
                <value>
                    <fullName>Succession</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Family_Leisure_Travel_Frequency__c</fullName>
        <label>Family/Leisure Travel Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Extensively (15+)</fullName>
                </value>
                <value>
                    <fullName>Travel Moderately (6-14)</fullName>
                </value>
                <value>
                    <fullName>Travel Rarely (0-5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Family__c</fullName>
        <label>Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adopted Children</fullName>
                </value>
                <value>
                    <fullName>Balancing Work And Family</fullName>
                </value>
                <value>
                    <fullName>Blended Families</fullName>
                </value>
                <value>
                    <fullName>Family Finances</fullName>
                </value>
                <value>
                    <fullName>Father/Daughter Relationships</fullName>
                </value>
                <value>
                    <fullName>Father/Son Relationships</fullName>
                </value>
                <value>
                    <fullName>Generational Transitions</fullName>
                </value>
                <value>
                    <fullName>Learning Challenges</fullName>
                </value>
                <value>
                    <fullName>Marriage/Couple Relationships</fullName>
                </value>
                <value>
                    <fullName>Mother/Daughter Relationships</fullName>
                </value>
                <value>
                    <fullName>Mother/Son Relationships</fullName>
                </value>
                <value>
                    <fullName>Needs of Aging Parents</fullName>
                </value>
                <value>
                    <fullName>Relating to Pre-adolescents (6-12)</fullName>
                </value>
                <value>
                    <fullName>Relating to Teenagers (13-18)</fullName>
                </value>
                <value>
                    <fullName>Relating to Toddlers (2-5)</fullName>
                </value>
                <value>
                    <fullName>Relating to Young Adults (18)</fullName>
                </value>
                <value>
                    <fullName>School Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Leadership__c</fullName>
        <label>Leadership</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Community Leadership</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Executive Leadership</fullName>
                </value>
                <value>
                    <fullName>Family Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Management_Team__c</fullName>
        <label>Management Team</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chapter Health</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Insights</fullName>
                </value>
                <value>
                    <fullName>Events Management</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>For deletion</fullName>
                </value>
                <value>
                    <fullName>Forum</fullName>
                </value>
                <value>
                    <fullName>Forum Management</fullName>
                </value>
                <value>
                    <fullName>GLC Team</fullName>
                </value>
                <value>
                    <fullName>Global Operations</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Services</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Member Benefits Alliances &amp; Sponsorships</fullName>
                </value>
                <value>
                    <fullName>Member Services</fullName>
                </value>
                <value>
                    <fullName>Membership Development</fullName>
                </value>
                <value>
                    <fullName>Networks</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
                <value>
                    <fullName>RCC</fullName>
                </value>
                <value>
                    <fullName>Regional Management</fullName>
                </value>
                <value>
                    <fullName>YPO Gold</fullName>
                </value>
                <value>
                    <fullName>WPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_Regional_Contacts__c</fullName>
        <label>Regional Contacts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Australia/New Zealand Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Canada Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Central US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>East Central US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Europe Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>International Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Lat. America/Caribbean Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Mid. East/North Africa Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>North Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Northeastern US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Pacific US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>South Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Southeast Asia Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Southern US Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Western US Regional Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_YPO_Internal__c</fullName>
        <label>YPO Internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exp_YPO__c</fullName>
        <label>YPO</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion a Seminar</fullName>
                </value>
                <value>
                    <fullName>Champion a Youth/Family Program</fullName>
                </value>
                <value>
                    <fullName>Champion an Experience</fullName>
                </value>
                <value>
                    <fullName>Champion an Industry Roundtable</fullName>
                </value>
                <value>
                    <fullName>Event or Committee Chair</fullName>
                </value>
                <value>
                    <fullName>Serve as a Resource</fullName>
                </value>
                <value>
                    <fullName>Serve YPO Gold Event Chair</fullName>
                </value>
                <value>
                    <fullName>Serve WPO Event Chair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook_Messenger__c</fullName>
        <label>Facebook Messenger</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Family_Caring_for_aging_parents__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO? Caring for aging parents.</inlineHelpText>
        <label>Family - Caring for aging parents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Children_employment_internships__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO? Children employment and internships.</inlineHelpText>
        <label>Family-Children employment &amp; internships</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_Learning__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO?</inlineHelpText>
        <label>Family Learning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_be_a_better_S_P_or_parent__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO? How to be a better spouse or parent.</inlineHelpText>
        <label>Family - be a better S/P or parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_parent_child_events__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO? Parent – child events.</inlineHelpText>
        <label>Family - parent - child events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family_ways_to_connect_S_P_Children__c</fullName>
        <inlineHelpText>How valuable are the following Family Learning opportunities offered by YPO? Ways to better connect with spouse and children.</inlineHelpText>
        <label>Family - ways to connect S/P &amp; Children</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax_Country_Code__c</fullName>
        <label>Fax Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Address__c</fullName>
        <formula>Firm_Street__c &amp; &apos;,&apos; &amp; BR() &amp; Firm_City__c &amp; &apos;,&apos; &amp; Firm_State__c &amp; &apos;,&apos; &amp; BR() &amp; Firm_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_City__c</fullName>
        <label>Firm City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_State__c</fullName>
        <label>Firm State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Street__c</fullName>
        <label>Firm Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private for Profit</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firm_Zip__c</fullName>
        <label>Firm Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal50th_Year__c</fullName>
        <description>this is to set the fiscal year the person turns 50</description>
        <formula>IF(Month(Birthdate) &lt; 7 , Year(Birthdate) + 50 , Year(Birthdate) + 51)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>50th Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Text(Year(Date_Last_Grace_Year_Used__c))&amp; &apos; &apos; &amp; Text((Year(Date_Last_Grace_Year_Used__c)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forum_Vouchers_Available_S_P__c</fullName>
        <description>Number of available Forum Fundamentals Vouchers for the Spouse/Partner</description>
        <inlineHelpText>Number of available Forum Fundamentals Vouchers for the Spouse/Partner</inlineHelpText>
        <label>Forum Vouchers Available S/P</label>
        <summaryFilterItems>
            <field>Voucher__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Voucher__c.Type__c</field>
            <operation>equals</operation>
            <value>FFVS</value>
        </summaryFilterItems>
        <summaryForeignKey>Voucher__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Forum_Vouchers_Available__c</fullName>
        <description>Number of available Forum Fundamentals Vouchers for the Member</description>
        <inlineHelpText>Number of available Forum Fundamentals Vouchers for the Member</inlineHelpText>
        <label>Forum Vouchers Available</label>
        <summaryFilterItems>
            <field>Voucher__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Voucher__c.Type__c</field>
            <operation>equals</operation>
            <value>FFV</value>
        </summaryFilterItems>
        <summaryForeignKey>Voucher__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Requirements__c</fullName>
        <label>Geographic Requirements</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Golf_Clubs__c</fullName>
        <description>Golf Clubs where member has connections</description>
        <label>Golf Courses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GooglePlus__c</fullName>
        <label>GooglePlus</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GoogleTalk__c</fullName>
        <label>GoogleTalk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Map_of_Address__c</fullName>
        <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; MailingStreet &amp; &apos;,+&apos; &amp; MailingCity &amp; &apos;,+&apos; &amp; MailingState &amp; &apos;,+&apos; &amp; MailingCountry,&quot;Click to Plot on Maps&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Map of Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Accrued_FY17__c</fullName>
        <label># Grace Years Accrued FY17</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Years_Accrued__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Grace Years Accrued</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Years_Available__c</fullName>
        <formula>IF(Grace_Accrued_FY17__c &gt; Grace_Years_Used__c,  Grace_Accrued_FY17__c - Grace_Years_Used__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Grace Years Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Years_Used__c</fullName>
        <label># Grace Years Used</label>
        <summaryFilterItems>
            <field>Exception__c.Exception_Category__c</field>
            <operation>equals</operation>
            <value>Grace</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Exception__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Exception__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeFax__c</fullName>
        <label>Home Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Home_Fax_Country_Code__c</fullName>
        <label>Home Fax Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Country_Code__c</fullName>
        <label>Home Phone Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Extension__c</fullName>
        <label>Home Phone Extension</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseholdID__c</fullName>
        <description>This field will be populated with Household Account ID present on the relationship record.</description>
        <label>HouseholdID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Name__c</fullName>
        <label>Household Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <description>Putting household here allows easy grouping by household in reports with other contact related child objects.</description>
        <label>Household</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICQ__c</fullName>
        <label>ICQ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Name_AOL__c</fullName>
        <label>IM Name AOL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Name_Yahoo__c</fullName>
        <label>IM Name Yahoo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <formula>TEXT($Organization.CountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Acceptance_Company__c</fullName>
        <inlineHelpText>Company of employment at time of lead conversion</inlineHelpText>
        <label>Initial Acceptance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
</CustomObject>